# rag-migration

./: .geminiignore  .gitignore  README.md
01-generation/: Dockerfile  README.md  main.py  orchestrator.py  pyproject.toml
01-generation/infra/scripts/: check_alloydb.sh  deploy.sh  deploy_and_run.sh  init_db.sql
01-generation/infra/terraform/: main.tf  provider.tf  terraform.tfvars.template  variables.tf
01-generation/src/: bigquery_fetcher.py  db_writer.py  embedder.py
01-generation/tests/: test_bigquery_fetcher.py  test_db_writer.py  test_embedder.py  test_main.py  test_orchestrator.py
02-ui/: .env.template  .gitignore  README.md  jest.config.ts  package-lock.json  package.json
02-ui/app/: layout.tsx  page.tsx
02-ui/app/__tests__/: page.test.tsx
02-ui/app/api/search/: route.ts
02-ui/app/api/search/__tests__/: integration.test.ts  route.test.ts
02-ui/components/: ModelSwitcher.tsx  SearchBar.tsx  SearchResultList.tsx
02-ui/components/__tests__/: ModelSwitcher.test.tsx  SearchBar.test.tsx  SearchResultList.test.tsx
02-ui/hooks/: useSearch.ts
02-ui/hooks/__tests__/: useSearch.test.ts
02-ui/lib/: db.ts  embeddings.ts
02-ui/lib/__tests__/: db.test.ts  embeddings.test.ts
03-migration/: 001_add_embedding_v2.sql  Dockerfile  README.md  main.py  orchestrator.py  pyproject.toml
03-migration/infra/scripts/: deploy_migration.sh
03-migration/src/: embedder.py  main.py  migration_orchestrator.py  orchestrator.py
03-migration/tests/: test_embedder.py  test_main.py  test_migration_orchestrator.py  test_orchestrator.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/initial-embeddings_20260303/: index.md
conductor/archive/semantic-search-ui_20260325/: plan.md  spec.md
conductor/tracks/initial-embeddings_20260303/: metadata.json  plan.md  spec.md
conductor/tracks/multilingual-migration_20260401/: metadata.json  plan.md  spec.md
conductor/tracks/semantic-search-ui_20260325/: index.md  metadata.json  plan.md
docs/: deepresearch-results.md
