[project]
name = "03-migration"
version = "0.1.0"
description = "Batch migration of product embeddings to gemini-embedding-001"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-aiplatform>=1.140.0",
    "google-cloud-alloydb-connector[pg8000]>=1.12.0",
    "google-cloud-run>=0.15.0",
    "google-genai>=1.65.0",
    "pgvector>=0.4.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "sqlalchemy>=2.0.48",
    "pyopenssl>=23.0.0",
    "cryptography>=41.0.0",
]
