[project]
name = "03-migration"
version = "0.1.0"
description = "Batch migration of product embeddings to gemini-embedding-001"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-aiplatform>=1.145.0",
    "google-cloud-alloydb-connector[pg8000]>=1.12.1",
    "google-cloud-run>=0.16.0",
    "google-genai>=1.70.0",
    "pgvector>=0.4.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "sqlalchemy>=2.0.48",
    "pyopenssl>=26.0.0",
    "cryptography>=46.0.6",
]

[tool.pytest.ini_options]
pythonpath = ["."]
